tests/paczka1/small_fuzzy/86643433.err
Error in line 6: YvMJcuHq A246 88,8
Error in line 14: 46XqfdOE A246 10,14
